# 3-step

./: .gitignore  lap_dis_schema.sql  new_data_dump.sql
server/: .gitignore  add_gift_card_code.py  add_store_users.py  auto_store_map.py  data_dump.py  dump_gift_cards.py  dump_hr_data.py  dumped_data_1.sql  f.py  final_dump.py  gift_card_res.md  mail_body.html  main.py  map_vendors_to_beneficiary.py  offline_reports.md  pyproject.toml  region_dump.py  sms_test.py  stores_data_dump.py  update_gift_card.py  vendor_spoc_data_dump.py  vendors_data_dump.py
server/alembic/: env.py
server/alembic/versions/: 064e827cb1dd_added_coups_table.py  11b715382a1e_added_bill_reciept_photo.py  22e01ca16cb8_avaliable_date_in_upgrade.py  (+35 more)
server/controllers/: auth_controller.py  bulk_upload_controller.py  candidates_controller.py  dashboard_controller.py  region_controller.py  stats_controller.py  store_controller.py  user_management_controller.py  utility_files_controller.py  vendors_controller.py  verification_controller.py
server/models/: __init__.py  candidates.py  cities.py  coupons.py  issued_statuses.py  offline_upload_results.py  otps.py  password_reset_otps.py  regions.py  stores.py  upgrade_reqests.py  users.py  utilty_files.py  vendors.py  verification_statuses.py
server/notebooks/: deep_face.ipynb
server/routes/: auth_routes.py  candidate_routes.py  dashboard_routes.py  region_routes.py  secure_file_serving_routes.py  store_routes.py  user_management_routes.py  utility_file_routes.py  vendor_routes.py  verification_routes.py
server/utils/: helpers.py  log_config.py
(+133 files in other folders)
